--- a/정훈/강의정리.md
+++ b/정훈/강의정리.md
@@ -89,3 +89,39 @@ main {
 ~~~
 
 **재귀는 스택프레임을 활용하기 때문에 반복문보다 성능이 좋지 않다.**
+
+
+
+5. 이진트리순회(DFS)
+
+![스크린샷 2023-03-11 오후 4.24.18](../../스크린샷 2023-03-11 오후 4.24.18.png)
+
+
+
+- 전위순회 : 부 -> 왼 -> 오
+  - 1 2 4 5 3 6 7
+- 중위순회 : 왼 -> 부 -> 오
+  - 4 2 5 1 6 3 7
+- 후위순회 : 왼 -> 오 -> 부
+  - 4 5 2 6 7 3 1
+
+![스크린샷 2023-03-11 오후 4.29.14](../../스크린샷 2023-03-11 오후 4.29.14.png)
+
+
+
+6. 부분집합 구하기(DFS)
+
+~~~java
+int ch = new int[n];
+//방문체크
+ch[n] = 1;
+dfs(n+1);
+ch[n] = 0;
+dfs(n+1);
+
+~~~
+
+
+
+7. 이진트리 순회(BFS)
+
